--- a/oj-client/src/index.html
+++ b/oj-client/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>OjClient</title>
   <base href="/">
-
+  <script src="https://cdn.auth0.com/js/lock-9.0.min.js"></script>
+  <script src="/socket.io/socket.io.js/"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src=""https://cdn.auth0.com/js/lock-9.0.min.js""></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
