--- a/oj-client/src/index.html
+++ b/oj-client/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>OjClient</title>
@@ -9,7 +10,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+<script>
+  // Defines define if define is not defined -_-
+  // window.define = window.define || ace.define;
+</script>
+
 </html>
